--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "react-scroll": "^1.8.2",
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
+    "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.11",
+    "@types/styled-system": "^5.1.12",
     "babel-plugin-styled-components": "^1.13.2",
     "typescript": "4.3.5"
   }
