--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "11.0.1",
@@ -21,6 +23,10 @@
     "@types/styled-components": "^5.1.11",
     "@types/styled-system": "^5.1.12",
     "babel-plugin-styled-components": "^1.13.2",
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.0",
     "typescript": "4.3.5"
   }
 }
