--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "check-types": "tsc --pretty --noEmit",
     "lint": "next lint",
+    "format": "prettier --write .",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -26,7 +28,8 @@
     "eslint": "^7.31.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
-    "husky": "^7.0.0",
-    "typescript": "4.3.5"
+    "prettier": "^2.3.2",
+    "typescript": "4.3.5",
+    "husky": "^7.0.0"
   }
 }
