--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "check-types": "tsc --pretty --noEmit",
     "lint": "next lint",
-    "format": "prettier --write .",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -28,8 +26,15 @@
     "eslint": "^7.31.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.1.0",
     "prettier": "^2.3.2",
-    "typescript": "4.3.5",
-    "husky": "^7.0.0"
+    "typescript": "4.3.5"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "npx eslint",
+      "npx prettier --write"
+    ]
   }
 }
