--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
@@ -18,6 +21,11 @@
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.0",
+    "@types/jest": "^26.0.24",
     "@types/react": "17.0.14",
     "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.11",
@@ -27,6 +35,8 @@
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.0",
+    "jest": "^27.0.6",
+    "jest-environment-jsdom": "^27.0.6",
     "lint-staged": "^11.1.0",
     "prettier": "^2.3.2",
     "typescript": "4.3.5"
