--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint ./ --ext js,jsx,ts,tsx",
+    "lint:fix": "npm run lint -- --fix",
+    "prettier": "npx prettier ./ --check",
+    "prettier:fix": "npm run prettier -- --write",
+    "format": "npm run prettier:fix && npm run lint:fix",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -30,10 +34,18 @@
     "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.11",
     "@types/styled-system": "^5.1.12",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "^7.31.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
     "jest-environment-jsdom": "^27.0.6",
@@ -43,8 +55,7 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
-      "npx eslint",
-      "npx prettier --write"
+      "npm run format"
     ]
   }
 }
