--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "react/react-in-jsx-scope": "off",
     "linebreak-style": "off",
     "arrow-body-style": "off",
+    "no-param-reassign": ["error", { "props": false }],
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "no-use-before-define": "off",
     "no-unused-vars": "off",
