--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.0.0",
+    "react-redux": "^7.2.4",
     "react-scroll": "^1.8.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5"
   },
