--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
+    "js-cookie": "^3.0.0",
     "next": "11.0.1",
+    "next-redux-cookie-wrapper": "^2.0.1",
+    "next-redux-wrapper": "^7.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.0.0",
@@ -34,6 +37,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.0",
     "@types/jest": "^26.0.24",
+    "@types/js-cookie": "^2.2.7",
     "@types/react": "17.0.14",
     "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.11",
