--- a/package.json
+++ b/package.json
@@ -18,16 +18,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
-    "js-cookie": "^3.0.0",
     "next": "11.0.1",
     "next-redux-cookie-wrapper": "^2.0.1",
     "next-redux-wrapper": "^7.0.2",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.0.0",
     "react-redux": "^7.2.4",
     "react-scroll": "^1.8.2",
-    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5"
   },
@@ -37,7 +36,6 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.0",
     "@types/jest": "^26.0.24",
-    "@types/js-cookie": "^2.2.7",
     "@types/react": "17.0.14",
     "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.11",
