--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.0",
     "@types/jest": "^26.0.24",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.14",
     "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.11",
