--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --coverage --watchAll",
     "start": "next start",
     "lint": "eslint ./ --ext js,jsx,ts,tsx",
     "lint:fix": "npm run lint -- --fix",
@@ -24,7 +24,7 @@
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hot-toast": "^2.0.0",
+    "react-hot-toast": "^2.1.0",
     "react-redux": "^7.2.4",
     "react-scroll": "^1.8.2",
     "styled-components": "^5.3.0",
