--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
-    "next": "11.0.1",
+    "next": "^11.1.0",
     "next-redux-cookie-wrapper": "^2.0.1",
     "next-redux-wrapper": "^7.0.2",
     "nprogress": "^0.2.0",
